# coding-interview-university

./: README.md
practice-c/BSTree/: CMakeLists.txt  bst_test.c  bst_test.h  bstree.c  bstree.h  main.c
practice-c/BSTree/.cache/clangd/index/: bst_test.c.ADD7CD33B830AE9C.idx  bst_test.h.111D15B043ED60DD.idx  bstree.c.A583F86209DE02C9.idx  bstree.h.6D7C56C4FA50C4DC.idx  main.c.ADB02A308B577012.idx
practice-c/arrays/: Makefile  program  vector.c
practice-c/binary_search/: CMakeLists.txt  binary_search.c  binary_search.h  main.c  tests.c  tests.h
practice-c/binary_search/.cache/clangd/index/: binary_search.c.24313389C8A119B2.idx  binary_search.h.7984C175F74E2841.idx  main.c.C45B8214DAF60D3C.idx  tests.c.A62A32BE5AF11E4E.idx  tests.h.9F50C4A0F0D415E8.idx
practice-c/bitwise/: CMakeLists.txt  bitwise.c  bitwise.h
practice-c/bitwise/.cache/clangd/index/: bitwise.c.1B81537F473DA8F2.idx  bitwise.h.74635985231DC467.idx
practice-c/hash_tables/: CMakeLists.txt  Makefile  hash_map_tests.c  hash_map_tests.h  hash_table.c  hash_table.h  main.c  program
practice-c/hash_tables/.cache/clangd/index/: hash_map_tests.c.3906C09CDFEEC1C5.idx  hash_map_tests.h.8512BAAE59B9039D.idx  hash_table.c.C362D5B168668737.idx  hash_table.h.507B0EB899425C43.idx  main.c.5AB0CD14752ABB24.idx
practice-c/lists/: Makefile  list.c  mylist.c  mylist.h  program
practice-c/matrix/: CMakeLists.txt  main.c  matrix.c  matrix.h
practice-c/matrix/.cache/clangd/index/: main.c.DF7CAC6678EB6B37.idx  matrix.c.74398464197B442F.idx  matrix.h.A7F108A1A1F70989.idx
practice-c/queues/: Makefile  main.c  program  queue_arr.c  queue_arr.h  queue_list.c
